--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,30 @@
             "args": [],
             "cwd": "${workspaceFolder:SwiftLearning}",
             "preLaunchTask": "swift: Build Release SwiftLearning"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "sourceLanguages": [
+                "swift"
+            ],
+            "name": "Debug SwiftLearningExperience",
+            "program": "${workspaceFolder:SwiftLearning}\\.build/debug/SwiftLearningExperience",
+            "args": [],
+            "cwd": "${workspaceFolder:SwiftLearning}",
+            "preLaunchTask": "swift: Build Debug SwiftLearningExperience"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "sourceLanguages": [
+                "swift"
+            ],
+            "name": "Release SwiftLearningExperience",
+            "program": "${workspaceFolder:SwiftLearning}\\.build/release/SwiftLearningExperience",
+            "args": [],
+            "cwd": "${workspaceFolder:SwiftLearning}",
+            "preLaunchTask": "swift: Build Release SwiftLearningExperience"
         }
     ]
 }
